--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Test
+<!doctype html>
+<html>
+  <head>
+    <title>Erik Connerty</title>
+  </head>
+  <body>
+    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+  </body>
+</html>
