--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h2>Dream Big</h2>
             <h3>Become a web developer</h3>
             <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
-            <a class="anchor-button" href="">DOWNLOAD RESUME</a>
+            <a class="anchor-button" href="https://github.com/econnerty/econnerty.github.io/blob/main/files/Erik%20Connerty%20Resume%20v2.1.1.docx.pdf">Resume</a>
         </div>
     </section>
     <section class="experience-area">
