--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="half-width">
             <h1><span>Erik Connerty</h1>
             <h3>University of South Carolina</h3>
-            <p>Undergraduate Research Intern and TA graduating in May 2023.</p>
+            <p>Student,Undergraduate Research Intern, and TA graduating in May 2023.</p>
             <a class="anchor-button" target="_blank" href="https://www.linkedin.com/in/erik-connerty-b7182221a/">LinkedIn</a>
         </div>
         <div class="half-width">
