--- a/index.html
+++ b/index.html
@@ -13,16 +13,17 @@
         <div class="half-width">
             <h1><span>Erik Connerty</h1>
             <h3>University of South Carolina</h3>
+            <h3>Computer Science</h3>
             <p>Student,Undergraduate Research Intern, and TA graduating in May 2023.</p>
             <a class="anchor-button" target="_blank" href="https://www.linkedin.com/in/erik-connerty-b7182221a/">LinkedIn</a>
         </div>
         <div class="half-width">
-            <img src="images/jhankar.png" alt="">
+            <img src="images/ec1.png" alt="">
         </div>
     </section>
     <section class="dream-area">
         <div class="half-width">
-            <img src="images/jhankar2.png" alt="">
+            <img src="images/ec2.jpg" alt="">
         </div>
         <div class="half-width">
             <h2>Dream Big</h2>
@@ -45,7 +46,8 @@
         </div>
     </section>
     <footer>
-        <p>© Peter Parker 2023, a Programming Hero initiative.</p>
+        <p>© Erik Connerty 2022</p>
+        <p>Website Forked from https://github.com/ProgrammingHero1/developer-portfolio</p>
     </footer>
 </body>
 </html>
