--- a/index.off.html
+++ b/index.off.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Erik Connerty</title>
+    <title>Erik Connerty's Website</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,10 +12,10 @@
     <section class="top-banner">
         <div class="half-width">
             <h1><span>Erik Connerty</h1>
-                <h3>University of South Carolina</h3>
-                <h3>Computer Science</h3>
-                <p>Student,Undergraduate Research Intern, and TA graduating in May 2023.</p>
-                <a class="anchor-button" target="_blank" href="https://www.linkedin.com/in/erik-connerty-b7182221a/">LinkedIn</a>
+            <h3>University of South Carolina</h3>
+            <h3>Computer Science</h3>
+            <p>Student,Undergraduate Research Intern, and TA graduating in May 2023.</p>
+            <a class="anchor-button" target="_blank" href="https://www.linkedin.com/in/erik-connerty-b7182221a/">LinkedIn</a>
         </div>
         <div class="half-width">
             <img src="images/ec1.png" alt="">
@@ -34,25 +34,15 @@
     </section>
     <section class="experience-area">
         <h2>Experiences</h2>
-        <div class="half-width" id="baby-web">
-            <h2>University of South Carolina</h2>
-            <h3>2022-Present | Undergraduate Teaching Assistant</h3>
-            <p>Aid professors in teaching undergraduate courses at the University of South Carolina.</p>
-        </div>
-        <div class="half-width" id="baby-web">
-            <h2>University of South Carolina AI Institute</h2>
-            <h3>2022-Present | Undergraduate Research Intern</h3>
-            <p>Research intern under the guidance of Dr. Vignesh Narayanan.</p>
-        </div>
         <div class="half-width" id="full-stack">
-            <h2>Space and Naval Systems Center Atlantic (SPAWAR)</h2>
-            <h3>2015-2017 | Intern</h3>
-            <p>Penetration testing and software development.</p>
+            <h2>Full Stack Web Developer</h2>
+            <h3>2021-Present | Pro Level Developer</h3>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
         </div>
         <div class="half-width" id="baby-web">
-            <h2>Tapestry Solutions</h2>
-            <h3>2017-2018 | Software Developer</h3>
-            <p>Worked for the software Integration team in conjunction with the DoD and Boeing.</p>
+            <h2>Baby Web Developer</h2>
+            <h3>2020-2021 | Programming Hero Learner</h3>
+            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
         </div>
     </section>
     <footer>
