--- a/index.html
+++ b/index.html
@@ -27,22 +27,22 @@
         </div>
         <div class="half-width">
             <h2>Dream Big</h2>
-            <h3>Become a web developer</h3>
-            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <h3>Aspiring Researcher and Software Developer</h3>
+            <p></p>
             <a class="anchor-button" href="https://github.com/econnerty/econnerty.github.io/blob/main/files/Erik%20Connerty%20Resume%20v2.1.1.docx.pdf">Resume</a>
         </div>
     </section>
     <section class="experience-area">
         <h2>Experiences</h2>
         <div class="half-width" id="baby-web">
-            <h2>University of South Carolina</h2>
-            <h3>2022-Present | Undergraduate Teaching Assistant</h3>
-            <p>Aid professors in teaching undergraduate courses at the University of South Carolina.</p>
-        </div>
-        <div class="half-width" id="baby-web">
             <h2>University of South Carolina AI Institute</h2>
             <h3>2022-Present | Undergraduate Research Intern</h3>
             <p>Research intern under the guidance of Dr. Vignesh Narayanan.</p>
+        </div>
+        <div class="half-width" id="baby-web">
+            <h2>University of South Carolina</h2>
+            <h3>2022-Present | Undergraduate Teaching Assistant</h3>
+            <p>Aid professors in teaching undergraduate courses at the University of South Carolina.</p>
         </div>
         <div class="half-width" id="full-stack">
             <h2>Space and Naval Systems Center Atlantic (SPAWAR)</h2>
