edit out experiences for now

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     </section>
     <section class="experience-area">
         <h2>Experiences</h2>
-        <div class="half-width" id="baby-web">
+            <h1><span>WIP!</h1>
+        <!--<div class="half-width" id="baby-web">
             <h2>University of South Carolina AI Institute</h2>
             <h3>2022-Present | Undergraduate Research Intern</h3>
             <p>Research intern under the guidance of Dr. Vignesh Narayanan.</p>
@@ -53,7 +54,7 @@
             <h2>Tapestry Solutions</h2>
             <h3>2017-2018 | Software Developer</h3>
             <p>Worked for the software Integration team in conjunction with the DoD and Boeing.</p>
-        </div>
+        </div>-->
     </section>
     <footer>
         <p>© Erik Connerty 2022</p>
