--- a/index.html
+++ b/index.html
@@ -35,22 +35,22 @@
     <section class="experience-area">
         <h2>Experiences</h2>
             <h1><span>WIP!</h1>
-        <div class="half-width" <!--id="baby-web"--></div>>
+        <div class=<!--"half-width"--> <!--id="baby-web"--></div>>
             <h2>University of South Carolina AI Institute</h2>
             <h3>2022-Present | Undergraduate Research Intern</h3>
             <p>Research intern under the guidance of Dr. Vignesh Narayanan.</p>
         </div>
-        <div class="half-width"  <!--id="baby-web"-->>
+        <div class=<!--"half-width"-->  <!--id="baby-web"-->>
             <h2>University of South Carolina</h2>
             <h3>2022-Present | Undergraduate Teaching Assistant</h3>
             <p>Aid professors in teaching undergraduate courses at the University of South Carolina.</p>
         </div>
-        <div class="half-width"  <!--id="baby-web"-->>
+        <div class=<!--"half-width"-->  <!--id="baby-web"-->>
             <h2>Space and Naval Systems Center Atlantic (SPAWAR)</h2>
             <h3>2015-2017 | Intern</h3>
             <p>Penetration testing and software development.</p>
         </div>
-        <div class="half-width"  <!--id="baby-web"-->>
+        <div class=<!--"half-width"-->  <!--id="baby-web"-->>
             <h2>Tapestry Solutions</h2>
             <h3>2017-2018 | Software Developer</h3>
             <p>Worked for the software Integration team in conjunction with the DoD and Boeing.</p>
