--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a class="anchor-button" href="https://github.com/econnerty/econnerty.github.io/blob/main/files/Erik%20Connerty%20Resume%20v2.1.1.docx.pdf">Resume</a>
         </div>
     </section>
-    <section class="experience-area">
+    <section class="dream-area">
         <h2>Experiences</h2>
         <div <!--id="baby-web"-->
             <h2>University of South Carolina AI Institute</h2>
@@ -45,19 +45,21 @@
             <p>Aid professors in teaching undergraduate courses at the University of South Carolina.</p>
         </div>
         <div <!--id="baby-web"-->>
+            <h2>Tapestry Solutions</h2>
+            <h3>2017-2018 | Software Developer</h3>
+            <p>Worked for the software Integration team in conjunction with the DoD and Boeing.</p>
+        </div>
+        <div <!--id="baby-web"-->>
             <h2>Space and Naval Systems Center Atlantic (SPAWAR)</h2>
             <h3>2015-2017 | Intern</h3>
             <p>Penetration testing and software development.</p>
         </div>
-        <div <!--id="baby-web"-->>
-            <h2>Tapestry Solutions</h2>
-            <h3>2017-2018 | Software Developer</h3>
-            <p>Worked for the software Integration team in conjunction with the DoD and Boeing.</p>
-        </div>-
     </section>
+    <section class="dream-area"></section>
     <footer>
         <p>© Erik Connerty 2022</p>
         <p>Website Forked from https://github.com/ProgrammingHero1/developer-portfolio</p>
     </footer>
+    </section>
 </body>
 </html>
