--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a class="anchor-button" target="_blank" href="https://www.linkedin.com/in/erik-connerty-b7182221a/">LinkedIn</a>
         </div>
         <div class="half-width">
-            <img src="images/ec1.png" alt="">
+            <img src="images/ec1.jpg" alt="">
         </div>
     </section>
     <section class="dream-area">
