looks bad, but whatever

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
             <h1><span>Erik Connerty</h1>
                 <h3>University of South Carolina</h3>
                 <h3>Computer Science</h3>
-                <p>Student,Undergraduate Research Intern, and TA graduating in May 2023.</p>
+                <h3>Student, Undergraduate Research Intern, and TA graduating in May 2023.</h3>
                 <a class="anchor-button" target="_blank" href="https://www.linkedin.com/in/erik-connerty-b7182221a/">LinkedIn</a>
         </div>
-        <div class="half-width">
+        <div class="pic-test">
             <img src="images/ec1.jpg" alt="">
         </div>
     </section>
     <section class="dream-area">
-        <div class="half-width">
+        <div class="pic-test2">
             <img src="images/ec2.jpg" alt="">
         </div>
         <div class="half-width">
@@ -32,34 +32,34 @@
             <a class="anchor-button" href="https://github.com/econnerty/econnerty.github.io/blob/main/files/Erik%20Connerty%20Resume%20v2.1.1.docx.pdf">Resume</a>
         </div>
     </section>
-    <section class="dream-area">
+    <section class="experience-area">
         <h2>Experiences</h2>
         <div>
-            <h2>University of South Carolina AI Institute</h2>
+            <h3>University of South Carolina AI Institute</h3>
             <h3>2022-Present | Undergraduate Research Intern</h3>
             <p>Research intern under the guidance of Dr. Vignesh Narayanan.</p>
         </div>
         <div>
-            <h2>University of South Carolina</h2>
+            <h3>University of South Carolina</h3>
             <h3>2022-Present | Undergraduate Teaching Assistant</h3>
             <p>Aid professors in teaching undergraduate courses at the University of South Carolina.</p>
         </div>
         <div>
-            <h2>Tapestry Solutions</h2>
+            <h3>Tapestry Solutions</h3>
             <h3>2017-2018 | Software Developer</h3>
             <p>Worked for the software Integration team in conjunction with the DoD and Boeing.</p>
         </div>
         <div>
-            <h2>Space and Naval Systems Center Atlantic (SPAWAR)</h2>
+            <h3>Space and Naval Systems Center Atlantic (SPAWAR)</h3>
             <h3>2015-2017 | Intern</h3>
             <p>Penetration testing and software development.</p>
         </div>
     </section>
-</body>
-    <section class="dream-area"></section>
+    <section class="end"></section>
     <footer>
         <p>© Erik Connerty 2022</p>
         <p>Website Forked from https://github.com/ProgrammingHero1/developer-portfolio</p>
     </footer>
     </section>
+</body> 
 </html>
