--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
             <p>Penetration testing and software development.</p>
         </div>
     </section>
-    <section class="end"></section>
-    <footer>
-        <p>© Erik Connerty 2022</p>
-        <p>Website Forked from https://github.com/ProgrammingHero1/developer-portfolio</p>
-    </footer>
+    <section>
+        <div class="end">
+            <p>© Erik Connerty 2022</p>
+            <p>Website Forked from https://github.com/ProgrammingHero1/developer-portfolio</p>
+        </div>
     </section>
 </body> 
 </html>
