--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <h2>Experiences</h2>
         <div>
             <h3>University of South Carolina AI Institute</h3>
-            <h3>2022-Present | Undergraduate Research Intern</h3>
-            <p>Research intern under the guidance of Dr. Vignesh Narayanan.</p>
+            <h3>2022-Present | Undergraduate Research Assistant</h3>
+            <p>Research Assistant under the guidance of Dr. Vignesh Narayanan.</p>
         </div>
         <div>
             <h3>University of South Carolina</h3>
