--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1><span>Erik Connerty</h1>
                 <h3>University of South Carolina</h3>
                 <h3>Computer Science</h3>
-                <h3>Student, Undergraduate Research Intern, and TA graduating in May 2023.</h3>
+                <h3>Student, Undergraduate Research Assistant, and TA graduating in May 2023.</h3>
                 <a class="anchor-button" target="_blank" href="https://www.linkedin.com/in/erik-connerty-b7182221a/">LinkedIn</a>
         </div>
         <div class="pic-test">
