--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         <div class="pic-test">
             <img src="images/ec1.jpg" alt="">
         </div>
-    </section>
-    <section class="dream-area">
         <div class="pic-test2">
             <img src="images/ec2.jpg" alt="">
         </div>
+    </section>
+    <section class="dream-area">
         <div class="half-width">
             <h2>Dream Big</h2>
             <h3>Aspiring Researcher and Software Developer</h3>
@@ -56,9 +56,8 @@
         </div>
     </section>
     <section>
-        <div class="end">
-            <p>© Erik Connerty 2022</p>
-            <p>Website Forked from https://github.com/ProgrammingHero1/developer-portfolio</p>
+        <div class=".end">
+            <div id="footer">© Erik Connerty 2022 <br/>Website Forked from https://github.com/ProgrammingHero1/developer-portfolio</div>
         </div>
     </section>
 </body> 
