--- a/index.html
+++ b/index.html
@@ -55,10 +55,8 @@
             <p>Penetration testing and software development.</p>
         </div>
     </section>
-    <section>
-        <div class=".end">
-            <div id="footer">© Erik Connerty 2022 <br/>Website Forked from https://github.com/ProgrammingHero1/developer-portfolio</div>
-        </div>
+    <section class="top-banner">
+        <div id="footer">© Erik Connerty 2022 <br/>Website Forked from https://github.com/ProgrammingHero1/developer-portfolio</div>
     </section>
 </body> 
 </html>
