--- a/index.html
+++ b/index.html
@@ -55,8 +55,16 @@
             <p>Penetration testing and software development.</p>
         </div>
     </section>
-    <section class="top-banner">
-        <div id="footer">© Erik Connerty 2022 <br/>Website Forked from https://github.com/ProgrammingHero1/developer-portfolio</div>
-    </section>
-</body> 
+</body>
+<footer>
+    <div style="position: relative; width: 600px; height: 800px;">    
+        <div style="position: absolute; bottom: 50px; left: 140%;width: 100%;color: white">
+            © Erik Connerty 2022
+        </div>
+        <div style="position: absolute; bottom: 30px; left: 140%;width: 100%;color: white">
+            <br/>Website Forked from:<br/>
+        </div>
+        <a href="https://github.com/ProgrammingHero1/developer-portfolio" style="position: absolute; bottom: 5px; left: 149%;width: 100%; color:aqua">GitHub</a>
+    </div>
+</footer>
 </html>
