--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
 </body>
 <footer>
     <div style="position: relative; width: 600px; height: 800px;">    
-        <div style="position: absolute; bottom: 50px; left: 140%;width: 100%;color: white">
+        <div style="position: absolute; bottom: 50px;text-align:center;width: 100%;color: white">
             © Erik Connerty 2022
         </div>
-        <div style="position: absolute; bottom: 30px; left: 140%;width: 100%;color: white">
+        <div style="position: absolute; bottom: 30px; text-align:center;width: 100%;color: white">
             <br/>Website Forked from:<br/>
         </div>
-        <a href="https://github.com/ProgrammingHero1/developer-portfolio" style="position: absolute; bottom: 5px; left: 149%;width: 100%; color:aqua">GitHub</a>
+        <a href="https://github.com/ProgrammingHero1/developer-portfolio" style="position: absolute; bottom: 5px;text-align:center;width: 100%; color:aqua">GitHub</a>
     </div>
 </footer>
 </html>
