--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </section>
 </body>
 <footer>
-    <div style="position: relative; width: 600px; height: 800px;">    
+    <div style="position: relative; width: 600px; height: 800px;width:100%">    
         <div style="position: absolute; bottom: 50px;text-align:center;width: 100%;color: white">
             © Erik Connerty 2022
         </div>
