--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div>
             <h3>Tapestry Solutions</h3>
             <h3>2017-2018 | Software Developer</h3>
-            <p>Worked for the software Integration team in conjunction with the DoD and Boeing.</p>
+            <p>Worked for the software Integration team in conjunction with the DoD (Department of Defense) and Boeing.</p>
         </div>
         <div>
             <h3>Space and Naval Systems Center Atlantic (SPAWAR)</h3>
